--- a/css/form.css
+++ b/css/form.css
@@ -8,9 +8,15 @@
 
 
 .form__input {
-    margin: 10px 0;
+    margin: 10px 0 10px 10px;
+    border: 2px solid #e2e1e1;
+    padding: 10px;
 }
 
 .form__button {
-    margin: 10px 0 10px 25px;
+    margin: 10px 10px 10px 20px;
+    height: 40px;
+    color: white;
+    background-color: teal;
+    border: none;
 }
