--- a/css/list.css
+++ b/css/list.css
@@ -2,8 +2,43 @@
     margin-bottom: 10px;
     padding: 10px;
     background-color: #ffffff;
+    list-style: none;
 }
 
 .list__Item {
-    list-style: none;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 10px;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.list__content--done {
+    text-decoration: line-through;
+}
+
+.list__buttonTask {
+    border: none;
+    color: #ffffff;
+    width: 30px;
+    height: 30px;
+}
+
+.list__buttonTask--done {
+    background-color:  #32c232;
+}
+
+.list__buttonTask--remove  {
+    background-color:  #c12f2f;
+}
+
+.list__buttonTask--done:active {
+    background-color:  #27a027;
+    border: 2px solid #000;
+}
+
+.list__buttonTask--remove:active {
+    background-color:  #e53838;
+    border: 2px solid #000;
 }
