--- a/css/form.css
+++ b/css/form.css
@@ -1,9 +1,10 @@
 .form {
     margin-bottom: 10px;
-    padding: 10px;
     background-color: #ffffff;
     display: grid;
     grid-template-columns: 4fr 1fr;
+    gap: 20px;
+    padding: 20px;
 }
 
 @media (max-width: 767px) {
@@ -16,13 +17,12 @@
 
 
 .form__input {
-    margin: 10px;
+    margin: 10px 0;
     border: 2px solid #e2e1e1;
-    padding: 10px;
 }
 
 .form__button {
-    margin: 10px;
+    margin: 10px 0 10px 10px;
     height: 40px;
     color: white;
     background-color: #008080;
