--- a/css/section.css
+++ b/css/section.css
@@ -1,9 +1,9 @@
 .section {
-    margin-bottom: 2px;
-    padding: 10px;
     background-color: #ffffff;
 }
 
 .section__header {
-    margin: 10px;
+    border-bottom: 2px solid #e2e1e1;
+    padding: 20px;
+    margin: 0;
 }
