--- a/css/form.css
+++ b/css/form.css
@@ -28,6 +28,12 @@
     background-color: #008080;
     border: none;
     cursor: pointer;
+    transition: 0.5s;
+}
+
+.form__button:hover {
+    transform: scale(1.1);
+    background-color: #00b3b3;
 }
 
 .form__button:focus {
