--- a/css/list.css
+++ b/css/list.css
@@ -23,22 +23,31 @@
     color: #ffffff;
     width: 30px;
     height: 30px;
+    transition: 0.5s;
 }
 
 .list__buttonTask--done {
-    background-color:  #32c232;
+    background-color: #119e11;
 }
 
-.list__buttonTask--remove  {
-    background-color:  #c12f2f;
+.list__buttonTask--done:hover {
+    background-color: #15c615;
 }
 
 .list__buttonTask--done:active {
-    background-color:  #27a027;
+    background-color: #17de17;
     border: 2px solid #000;
 }
 
+.list__buttonTask--remove {
+    background-color: #a81a1a;
+}
+
+.list__buttonTask--remove:hover {
+    background-color: #c71f1f;
+}
+
 .list__buttonTask--remove:active {
-    background-color:  #e53838;
+    background-color: #dd2222;
     border: 2px solid #000;
 }
